--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-APP_NAME=Laravel
+###########################################################
+###################### APP ENV ######################
+###########################################################
+
+APP_NAME=CRCMS
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -43,13 +47,11 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 SWOOLE_USER=
 SWOOLE_GROUP=
 
-# micro-service
-SERVICE_CONNECTION_DRIVER=consul
-SERVICE_CLIENT_DRIVER=restful
-SERVICE_DISCOVER_HOST=
-SERVICE_DISCOVER_PORT=8500
-SERVICE_DISCOVER_REFRESH_TIME=5
-SERVICE_SECRET=
+# microservice
+SECRET_STATUS=true
+SECRET_CIPHER=AES-256-CFB
+SECRET=
+
 
 ###########################################################
 ###################### Docker ENV ######################
