--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   "type": "project",
   "require": {
     "php": "^7.2.4",
+    "crcms/repository": "^2.1",
     "crcms/microservice-framework": "0.x-dev"
   },
   "require-dev": {
