--- a/.env.example
+++ b/.env.example
@@ -47,9 +47,9 @@ SWOOLE_USER=
 SWOOLE_GROUP=
 
 # microservice
-SECRET_STATUS=true
-SECRET_CIPHER=AES-256-CFB
-SECRET=
+SERVICE_SECRET_STATUS=true
+SERVICE_SECRET_CIPHER=AES-256-CFB
+SERVICE_SECRET=
 
 
 ###########################################################
