Add static expires

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -32,7 +32,6 @@ http {
 
     #include ./vhosts/*.conf;
 
-
     upstream php-upstream {
         server php-fpm:${PHP_FPM_PORT};
     }
@@ -57,6 +56,11 @@ http {
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   /usr/share/nginx/html;
+        }
+
+        # static resource
+        location ~* .*\.(html|gif|jpg|jpeg|bmp|png|ico|txt|js|css)$ {
+            expires 30d;
         }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
