--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -41,7 +41,7 @@ http {
         server_name  localhost;
 
         #charset koi8-r;
-        error_log /var/log/nginx/error2.log;
+        error_log /var/log/nginx/error.log;
 
         location / {
             root   ${CONTAINER_CODE_PATH}/public;
@@ -59,7 +59,7 @@ http {
         }
 
         # static resource
-        location ~* .*\.(html|gif|jpg|jpeg|bmp|png|ico|txt|js|css)$ {
+        location ~* \.(html|gif|jpg|jpeg|bmp|png|ico|txt|js|css)$ {
             expires 30d;
         }
 
