--- a/.env.example
+++ b/.env.example
@@ -72,3 +72,5 @@ NGINX_SSL_PORT=443
 PHP_FPM_INSTALL_MONGODB=false
 PHP_FPM_INSTALL_REDIS=false
 PHP_FPM_PORT=9000
+
+### consul ################################################
