--- a/.env.example
+++ b/.env.example
@@ -54,7 +54,7 @@ APP_RUN_PUID=1000
 APP_RUN_PGID=1000
 APP_RUN_NAME=crcms
 APP_RUN_GROUP=crcms
-TIMEZONE=UTC
+TIMEZONE=Asia/Shanghai
 
 ### workspace ################################################
 WORKSPACE_INSTALL_SWOOLE=true
