--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -56,10 +56,13 @@ http {
     open_file_cache_errors on;
 
     #upstream
-    upstream php-upstream {
+    upstream php-fpm-upstream {
         server php-fpm:${PHP_FPM_PORT};
     }
 
+    upstream consul-upstream {
+        server consul:8500;
+    }
     server {
         listen       80;
         server_name  localhost;
@@ -97,7 +100,7 @@ http {
         #
         location ~ \.php$ {
             root           ${CONTAINER_CODE_PATH}/public;
-            fastcgi_pass   php-upstream;
+            fastcgi_pass   php-fpm-upstream;
 
             fastcgi_index index.php;
             fastcgi_buffers 16 16k;
