Add networks remove links

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,7 @@ SERVICE_SECRET=
 ###################### Docker ENV ######################
 ###########################################################
 
+NETWORKS_DRIVER=bridge
 LOCAL_CODE_PATH=./
 LOCAL_DOCKER_PATH=./docker
 CONTAINER_CODE_PATH=/var/www
