--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,11 @@
 version: "3"
 
+networks:
+  frontend:
+    driver: ${NETWORKS_DRIVER}
+  backend:
+    driver: ${NETWORKS_DRIVER}
+
 services:
   workspace:
     build:
@@ -30,16 +36,20 @@ services:
       - "28080"
     ports:
       - "${WORKSPACE_SWOOLE_PORT}:28080"
+    networks:
+      - backend
     tty: true
   consul:
     build:
       context: ${LOCAL_DOCKER_PATH}/consul
-    network_mode: host
     volumes:
       - ${LOCAL_DOCKER_PATH}/consul/run.sh:/consul/run.sh
       - ${LOCAL_DOCKER_PATH}/consul/config:/consul/config
       - ${LOCAL_CODE_PATH}/storage/consul:/consul/data
     command: /consul/run.sh
+    networks:
+      - frontend
+      - backend
   nginx:
     build:
       context: ${LOCAL_DOCKER_PATH}/nginx
@@ -67,8 +77,9 @@ services:
     ports:
       - "${NGINX_HTTP_PORT}:80"
       - "${NGINX_SSL_PORT}:443"
-    links:
-      - php-fpm:php-fpm
+    networks:
+      - frontend
+      - backend
     depends_on:
       - php-fpm
       - workspace
@@ -94,3 +105,5 @@ services:
       - "9000"
     ports:
       - "${PHP_FPM_PORT}:9000"
+    networks:
+      - frontend
