Increased docker operating environment

--- a/.env.example
+++ b/.env.example
@@ -44,7 +44,7 @@ SERVICE_SECRET=
 ###########################################################
 ###################### Docker ENV ######################
 ###########################################################
-
+RUN_ENV=production
 NETWORKS_DRIVER=bridge
 LOCAL_CODE_PATH=./
 LOCAL_DOCKER_PATH=./docker
