--- a/docker/php-fpm/config-production/php-fpm.conf
+++ b/docker/php-fpm/config-production/php-fpm.conf
@@ -122,4 +122,4 @@
 ; Relative path can also be used. They will be prefixed by:
 ;  - the global prefix if it's been set (-p argument)
 ;  - /usr/local otherwise
-include=${CONTAINER_DOCKER_PATH}/php-fpm/run-conf/fpm.d/*.conf
+include=${CONTAINER_DOCKER_PATH}/php-fpm/run-config/fpm.d/*.conf
