--- a/docker/nginx/nginx-production.conf
+++ b/docker/nginx/nginx-production.conf
@@ -27,7 +27,7 @@ http {
     keepalive_timeout  65;
 
     #gzip  on;
-    
+
     server_tokens off;
 
     #include ./vhosts/*.conf;
@@ -63,152 +63,12 @@ http {
     upstream consul-upstream {
         server consul:8500;
     }
-
     server {
-        listen 80;
-        server_name consul.test;
-
-        auth_basic "consul";
-        auth_basic_user_file /var/www/htpasswd;
-
-        location / {
-            proxy_pass http://consul-upstream;
-        }
-    }
-    ############### dev ######################
-    server {
-            listen       8080;
-            server_name  report-api.kood-lease.net;
-
-            ssl off;
-            ssl_certificate /var/www/resources/ssl/report-api/cert-1542678625540_report-api.zubattery.com.crt;
-            ssl_certificate_key /var/www/resources/ssl/report-api/cert-1542678625540_report-api.zubattery.com.key;
-            ssl_prefer_server_ciphers on;
-            ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-            ssl_ciphers ECDHE-RSA-AES256-SHA384:AES256-SHA256:RC4:HIGH:!MD5:!aNULL:!eNULL:!NULL:!DH:!EDH:!AESGCM;
-            ssl_session_cache shared:SSL:10m;
-            ssl_session_timeout 10m;
-            ssl_buffer_size 8k;
-            ssl_session_tickets on;
-
-            #charset koi8-r;
-            error_log /var/log/nginx/error2.log;
-
-            location / {
-                root   ${CONTAINER_CODE_PATH}/public;
-                index  index.html index.php;
-                try_files $uri $uri/ /index.php?$query_string;
-            }
-
-            #error_page  404              /404.html;
-
-            # redirect server error pages to the static page /50x.html
-            #
-            error_page   500 502 503 504  /50x.html;
-            location = /50x.html {
-                root   /usr/share/nginx/html;
-            }
-
-            # static resource
-            location ~* \.(html|gif|jpg|jpeg|bmp|png|ico|txt|js|css)$ {
-                expires 30d;
-            }
-
-            # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-            #
-            #location ~ \.php$ {
-            #    proxy_pass   http://127.0.0.1;
-            #}
-
-            # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-            #
-            location ~ \.php$ {
-                root           ${CONTAINER_CODE_PATH}/public;
-                fastcgi_pass   php-fpm-upstream;
-
-                fastcgi_index index.php;
-                fastcgi_buffers 16 16k;
-                fastcgi_buffer_size 32k;
-                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-                include        /etc/nginx/fastcgi_params;
-            }
-
-            # deny access to .htaccess files, if Apache's document root
-            # concurs with nginx's one
-            #
-            #location ~ /\.ht {
-            #    deny  all;
-            #}
-        }
-
-        server {
-            #listen       80;
-            listen       8080;
-            server_name  report.kood-lease.net;
-
-            ssl on;
-            ssl_certificate /var/www/resources/ssl/report/cert-1542678632703_report.zubattery.com.crt;
-            ssl_certificate_key /var/www/resources/ssl/report/cert-1542678632703_report.zubattery.com.key;
-            ssl_prefer_server_ciphers on;
-            ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-            ssl_ciphers ECDHE-RSA-AES256-SHA384:AES256-SHA256:RC4:HIGH:!MD5:!aNULL:!eNULL:!NULL:!DH:!EDH:!AESGCM;
-            ssl_session_cache shared:SSL:10m;
-            ssl_session_timeout 10m;
-            ssl_buffer_size 8k;
-            ssl_session_tickets on;
-
-            #charset koi8-r;
-            error_log /var/log/nginx/report.zubattery.com;
-
-            location / {
-                root   ${CONTAINER_CODE_PATH}/new-manage-html/dist;
-                index  index.html;
-            }
-
-            #error_page  404              /404.html;
-
-            # redirect server error pages to the static page /50x.html
-            #
-            error_page   500 502 503 504  /50x.html;
-            location = /50x.html {
-                root   /usr/share/nginx/html;
-            }
-
-            # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-            #
-            #location ~ \.php$ {
-            #    proxy_pass   http://127.0.0.1;
-            #}
-
-            # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-            #
-
-            # deny access to .htaccess files, if Apache's document root
-            # concurs with nginx's one
-            #
-            #location ~ /\.ht {
-            #    deny  all;
-            #}
-        }
-
-    ################# production ####################
-    server {
-        listen       443;
-        server_name  report-api.zubattery.com;
-
-        ssl on;
-        ssl_certificate /var/www/resources/ssl/report-api/cert-1542678625540_report-api.zubattery.com.crt;
-        ssl_certificate_key /var/www/resources/ssl/report-api/cert-1542678625540_report-api.zubattery.com.key;
-        ssl_prefer_server_ciphers on;
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-        ssl_ciphers ECDHE-RSA-AES256-SHA384:AES256-SHA256:RC4:HIGH:!MD5:!aNULL:!eNULL:!NULL:!DH:!EDH:!AESGCM;
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 10m;
-        ssl_buffer_size 8k;
-        ssl_session_tickets on;
+        listen       80;
+        server_name  localhost;
 
         #charset koi8-r;
-        error_log /var/log/nginx/error2.log;
+        error_log /var/log/nginx/error.log;
 
         location / {
             root   ${CONTAINER_CODE_PATH}/public;
@@ -256,57 +116,6 @@ http {
         #    deny  all;
         #}
     }
-
-    server {
-        #listen       80;
-        listen       443;
-        server_name  report.zubattery.com;
-
-        ssl on;
-        ssl_certificate /var/www/resources/ssl/report/cert-1542678632703_report.zubattery.com.crt;
-        ssl_certificate_key /var/www/resources/ssl/report/cert-1542678632703_report.zubattery.com.key;
-        ssl_prefer_server_ciphers on;
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-        ssl_ciphers ECDHE-RSA-AES256-SHA384:AES256-SHA256:RC4:HIGH:!MD5:!aNULL:!eNULL:!NULL:!DH:!EDH:!AESGCM;
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 10m;
-        ssl_buffer_size 8k;
-        ssl_session_tickets on;
-
-        #charset koi8-r;
-        error_log /var/log/nginx/report.zubattery.com;
-
-        location / {
-            root   ${CONTAINER_CODE_PATH}/new-manage-html/dist;
-            index  index.html;
-        }
-
-        #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
-
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
-    }
 }
-
 
 
