--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ APP_NAME=CRCMS
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
+APP_ENCRYPTION=true
 
 LOG_CHANNEL=daily
 
@@ -32,46 +33,6 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 # swoole
-SWOOLE_USER=
-SWOOLE_GROUP=
-
-# microservice
-SERVICE_SECRET_STATUS=true
-SERVICE_SECRET_CIPHER=AES-256-CFB
-SERVICE_SECRET=
-
-
-###########################################################
-###################### Docker ENV ######################
-###########################################################
-RUN_ENV=production
-NETWORKS_DRIVER=bridge
-LOCAL_CODE_PATH=./
-LOCAL_DOCKER_PATH=./docker
-CONTAINER_CODE_PATH=/var/www
-CONTAINER_DOCKER_PATH=/var/www/docker
-# the application run mode
-APP_RUN_PUID=1000
-APP_RUN_PGID=1000
-APP_RUN_NAME=crcms
-APP_RUN_GROUP=crcms
-TIMEZONE=Asia/Shanghai
-
-### workspace ################################################
-WORKSPACE_INSTALL_SWOOLE=true
-WORKSPACE_INSTALL_MONGODB=false
-WORKSPACE_INSTALL_REDIS=false
-WORKSPACE_SWOOLE_PORT=28080
-# Open later
-WORKSPACE_SSH_PORT=22
-
-### nginx ################################################
-NGINX_HTTP_PORT=80
-NGINX_SSL_PORT=443
-
-### php-fpm ################################################
-PHP_FPM_INSTALL_MONGODB=false
-PHP_FPM_INSTALL_REDIS=false
-PHP_FPM_PORT=9000
-
-### consul ################################################
+SERVER_USER=
+SERVER_GROUP=
+SERVER_LOG_LEVEL=4
