--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ APP_NAME=CRCMS
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_ENCRYPTION=true
+APP_ENCRYPTION=false
 
 LOG_CHANNEL=daily
 
@@ -36,3 +36,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 SERVER_USER=
 SERVER_GROUP=
 SERVER_LOG_LEVEL=4
+SERVER_HTTP_HOST=0.0.0.0
+SERVER_HTTP_PORT=28080
