--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,10 @@
 ###########################################################
 
 APP_NAME=CRCMS
-APP_ENV=local
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
-APP_ENCRYPTION=false
+APP_DEBUG=false
+APP_ENCRYPTION=true
 
 LOG_CHANNEL=daily
 
@@ -23,6 +23,7 @@ QUEUE_CONNECTION=sync
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_RETRY_AFTER=90
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
